# irc-bot

./: .gitignore  Arguments.cpp  Arguments.h  CMakeLists.txt  Makefile  README  README.md  main.cpp  main.h  xrykal00.tar
src/: Arguments.cpp  Arguments.h  IrcBot.cpp  IrcBot.h  IrcParser.cpp  IrcParser.h  Makefile  TCPClient.cpp  TCPClient.h  TcpClient.cpp  TcpClient.h  UdpClient.cpp  UdpClient.h  main.cpp
